Specimen: UNZ font

--- a/docs/specimen.tex
+++ b/docs/specimen.tex
@@ -20,7 +20,7 @@
 \newfontfamily\mufifont{Palemonas MUFI}
 \newfontfamily\silfont{Doulos SIL}
 \newfontfamily\titusfont{TITUS Cyberbit Basic}
-\newfontfamily\unzfont{LUC.BreitkopfFrakturU1A}
+\newfontfamily\unzfont{LUC.EnsisheimU1A}
 
 \usepackage[
 %	CYFI,
