Add AGL (Adobe Glyph List) character set

--- a/docs/unicode-alphabets.bib
+++ b/docs/unicode-alphabets.bib
@@ -36,3 +36,9 @@
   url = {http://titus.uni-frankfurt.de/indexe.htm},
   urldate = {2019-07-12}
 }
+@online{AGL,
+  title = {adobe-type-tools/agl-aglfn},
+  date = {2019-07-20},
+  url = {https://github.com/adobe-type-tools/agl-aglfn/blob/master/glyphlist.txt},
+  urldate = {2019-07-20}
+}
