--- a/docs/unicode-alphabets.tex
+++ b/docs/unicode-alphabets.tex
@@ -51,6 +51,7 @@ Where \verb|options| must be one or more of the following character sets. See re
 \begin{figure}[H]
 \begin{description}
 
+\item[AGL] Adobe Glyph List\cite{AGL}.
 % \item[CSUR] - https://www.evertype.com/standards/csur/
 \item[CYFI] Early Cyrillic glyphs\cite{CYFI}.
 % DANIA ???
