Add UCSUR (Under-ConScript Unicode Registry) character set

--- a/docs/unicode-alphabets.bib
+++ b/docs/unicode-alphabets.bib
@@ -42,3 +42,9 @@
   url = {https://github.com/adobe-type-tools/agl-aglfn/blob/master/glyphlist.txt},
   urldate = {2019-07-20}
 }
+@online{UCSUR,
+  title = {Under-ConScript Unicode Registry},
+  date = {2019-07-20},
+  url = {http://www.kreativekorp.com/ucsur/},
+  urldate = {2019-07-20}
+}
