--- a/docs/unicode-alphabets.tex
+++ b/docs/unicode-alphabets.tex
@@ -59,6 +59,7 @@ Where \verb|options| must be one or more of the following character sets. See re
 \item[MUFI] The Medieval Unicode Font Initiative\cite{MUFI}.
 \item[SIL] SIL International\cite{SIL}.
 \item[TITUS] Thesaurus Indogermanischer Text- und Sprachmaterialien\cite{TITUS}.
+\item[UCSUR] Under-ConScript Unicode Registry\cite{UCSUR}.
 \item[UNZ] Normung von Sonderzeichen\cite{UNZ}.
 
 \end{description}
