--- a/latex/unicode-alphabets.sty
+++ b/latex/unicode-alphabets.sty
@@ -42,6 +42,7 @@
 \alph@setup{MUFI}{mufi}
 \alph@setup{SIL}{sil}
 \alph@setup{TITUS}{titus}
+\alph@setup{UCSUR}{ucsur}
 \alph@setup{UNZ}{unz}
 \alph@keys{
 	LINCUA/.style={CYFI,MUFI,TITUS}
