Fix dates in bibliography

--- a/docs/unicode-alphabets.tex
+++ b/docs/unicode-alphabets.tex
@@ -1,7 +1,12 @@
 % !TEX TS-program = lualatex
 \documentclass{article}
 
-\usepackage{biblatex}
+\usepackage[english]{babel}
+\usepackage[
+	backend=biber,
+	urldate=long,
+	date=long,
+]{biblatex}
 \addbibresource{unicode-alphabets.bib}
 
 \usepackage{showexpl}
