Specimen: table header correction

--- a/docs/specimen.tex
+++ b/docs/specimen.tex
@@ -81,8 +81,8 @@
 	\fi
 	\expanded{\unexpanded{\begin{xltabular}{\linewidth}}{\spec@columns}}
 	\toprule
-	& Code & \ifspec@has@entity&\fi \hfill \spec@charset\\
-	Glyph & Point & \ifspec@has@entity Entity Name &\fi Unicode Name\\
+	Code & & \ifspec@has@entity&\fi \hfill \spec@charset\\
+	Point & Glyph & \ifspec@has@entity Entity Name &\fi Unicode Name\\
 	\midrule
 	\endhead
 	\bottomrule
