--- a/docs/unicode-alphabets.tex
+++ b/docs/unicode-alphabets.tex
@@ -93,7 +93,7 @@ Additionally, one may configure different fonts for each character set, as in th
 
 If no fonts are configured, the document font will be used (note that this may give undesirable results, as few fonts support multiple character sets\footnote{I believe Andreas Stötzner's \emph{Andron Mega} does, albeit I haven't tried it as it is somewhat expensive.}).
 
-Finally, the \verb|MUFI| and \verb|UNZ| character sets have defined entity names, which result in the creation of macros for each character (see \verb|msignfour| in the following example). These can be suppressed with the \verb|disableentitymacros| option.
+Finally, the \verb|MUFI| and \verb|UNZ| character sets have defined entity names, which result in the creation of macros for each character (see \verb|msignflour| in the following example). These can be suppressed with the \verb|disableentitymacros| option.
 
 \section{Usage}
 
