Specimen: Use different UNZ font

--- a/docs/specimen.tex
+++ b/docs/specimen.tex
@@ -24,7 +24,7 @@
 \newfontfamily\mufifont{Palemonas MUFI}
 \newfontfamily\silfont{Doulos SIL}
 \newfontfamily\titusfont{TITUS Cyberbit Basic}
-\newfontfamily\unzfont{LUC.EnsisheimU1A}
+\newfontfamily\unzfont{LOB.Ensisheim}
 
 \usepackage[
 %	CYFI,
